# chat-room

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
sophia/: Cargo.toml
sophia-core/: Cargo.toml
sophia-core/cert/: cert.crt  cert.der  cert.key
sophia-core/src/: command.rs  consts.rs  errors.rs  lib.rs  macros.rs  model.rs
sophia-net/: Cargo.toml
sophia-net/src/quic/: client.rs  connection.rs  mod.rs  server.rs
sophia-server/: Cargo.toml
sophia-server/src/: main.rs  server.rs
sophia-server/src/controller/: caller.rs  conn_manager.rs  handler.rs  mod.rs  server.rs
sophia-server/src/repository/: chat.rs  message.rs  mod.rs  session.rs
sophia-server/src/service/: message.rs  mod.rs  push.rs  user.rs
sophia/src/: client.rs  config.rs  main.rs  ui.rs
sophia/src/controller/: caller.rs  controller.rs  handler.rs  mod.rs  view_model.rs
sophia/src/ui/: app_view.rs  input_view.rs  log_view.rs  message_view.rs  mod.rs  theme.rs  user_list_view.rs
sophia/src/view_model/: app.rs  input.rs  log.rs  messages.rs  mod.rs  user_list.rs
