[package]
name = "sophia-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
quinn = "0.10.1"
quinn-proto = "0.10.1"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more= "0.99.17"