[package]
name = "sophia-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia-core = { path = "../sophia-core" }
tokio = { version = "1", features = ["full"] }
quinn = "0.10.1"
rustls = { version = "0.21.1", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"
rustls-pemfile = "1.0.0"
thiserror = "1.0.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
async-trait = "0.1.68"
futures-util = { version = "0.3.5", features = ["io"] }