[package]
name = "sophia-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia-core = { path = "../sophia-core" }
sophia-net = { path = "../sophia-net" }
tokio = { version = "1", features = ["full"] }
quinn = "0.10.1"
rustls = { version = "0.21.1", features = ["dangerous_configuration", "quic"] }
rcgen = "0.10.0"
rustls-pemfile = "1.0.0"
thiserror = "1.0.40"
chrono = "0.4.26"
log = "0.4"
env_logger = "0.10"
futures-util = { version = "0.3.5", features = ["io"] }
async-trait = "0.1.68"
rand = "0.8.5"
clap = { version = "4", features = ["derive"] }
