[package]
name = "sophia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
quinn = "0.10.1"
rustls = { version = "0.21.1", features = ["dangerous_configuration", "quic"] }
sophia-core = { path = "../sophia-core" }
sophia-net = { path = "../sophia-net" }
chrono = "0.4.26"
log = "0.4.14"
env_logger = "0.10"
async-trait = "0.1.68"
futures = "0.1.31"
futures-util = { version = "0.3.5", features = ["io"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8.5"
url = "2.3.0"
trust-dns-resolver = "*"
tui = { version = "0.14.0", default-features = false, features = ['crossterm', 'serde'] }
crossterm = "0.18.2"
whoami = "1.1.0"
unicode-width = "0.1.5"
fern = "0.6.0"
console-subscriber = "0.1.10"